# HVD-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  data.db
include/: bot.hpp  commands.hpp  db.hpp  log.hpp  utils.hpp
include/services/: gelbooru.hpp  kemono.hpp  pixiv.hpp  rule34.hpp  service.hpp
src/: bot.cpp  commands.cpp  db.cpp  main.cpp  utils.cpp
src/services/: gelbooru.cpp  kemono.cpp  pixiv.cpp  rule34.cpp
